--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,9 @@
 @import "utils/variables";
 @import "components/container";
 @import "components/logo";
+@import "components/social-media-icons";
 @import "components/page-header";
+@import "components/main-title";
+@import "components/main-section";
+@import "components/team-section";
+@import "components/page-footer";
