--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -10,3 +10,18 @@ a {
   font-style: normal;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+button {
+  cursor: pointer;
+}
+
+figure,
+figcaption {
+  margin: 0;
+  padding: 0;
+}
+
+figure {
+  display: flex;
+  flex-direction: column;
+}
