--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -56,22 +56,6 @@
   display: flex;
   list-style: none;
 
-  &__element {
-    display: flex;
-    align-items: center;
-
-    &:first-child {
-      margin-right: 50px;
-    }
-    &:hover .contact__icon {
-      fill: $primary-color;
-    }
-    &:hover .contact__link {
-      color: $primary-color;
-      cursor: pointer;
-    }
-  }
-
   &__icon {
     display: flex;
     margin-right: 10px;
@@ -85,5 +69,21 @@
     font-size: 14px;
     line-height: 1.15;
     letter-spacing: 0.02em;
+  }
+}
+
+.contact__element {
+  display: flex;
+  align-items: center;
+
+  &:first-child {
+    margin-right: 50px;
+  }
+  &:hover .contact__icon {
+    fill: $primary-color;
+  }
+  &:hover .contact__link {
+    color: $primary-color;
+    cursor: pointer;
   }
 }
