Near the end of the refactorization

--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -6,10 +6,107 @@
   display: flex;
 }
 
+.footer-contact {
+  margin-top: 60px;
+  margin-left: 215px;
+}
+
 .address {
   color: white;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   margin-top: 20px;
+  font-style: normal;
+
+  &__element {
+    margin: 0 0 9px 0;
+  }
+
+  &__link {
+    color: #757575;
+  }
+}
+
+.footer-social-media {
+  margin-left: 70px;
+  margin-top: 72px;
+
+  &__heading {
+    text-transform: uppercase;
+    color: white;
+    font-weight: 700;
+    letter-spacing: 0.03em;
+    margin: 0 0 20px 0;
+    font-size: 14px;
+    line-height: 16px;
+  }
+  &__list {
+    list-style: none;
+    display: flex;
+    padding: 0;
+  }
+}
+
+.footer-form {
+  position: relative;
+  margin-top: 72px;
+  margin-left: 78px;
+  width: 570px;
+  min-height: 86px;
+
+  &__heading {
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 16px;
+    color: white;
+    display: block;
+    margin-bottom: 20px;
+    letter-spacing: 0.03em;
+  }
+
+  &__elements {
+    display: flex;
+  }
+
+  &__input {
+    height: 50px;
+    width: 358px;
+    top: 36px;
+    background-color: $background-color;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 4px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    color: rgba(255, 255, 255, 0.6);
+    padding: 15px 16px;
+    outline: none;
+
+    &::placeholder {
+      color: rgba(255, 255, 255, 0.6);
+    }
+  }
+
+  &__button {
+    min-width: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-left: 12px;
+    background: #2196f3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border-width: 0;
+    color: white;
+    fill: white;
+    letter-spacing: 0.06em;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+  }
+
+  &__icon {
+    width: 24px;
+    height: 24px;
+  }
 }
