--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,11 @@
 @import "components/social-media-icons";
 @import "components/page-header";
 @import "components/main-title";
-@import "components/main-section";
-@import "components/team-section";
+@import "components/current-offer";
+@import "components/team";
+@import "components/clients";
 @import "components/page-footer";
+@import "components/modal";
+@import "components/checkbox";
+@import "components/filter-button";
+@import "components/projects";
