--- a/css/styles.css
+++ b/css/styles.css
@@ -254,18 +254,7 @@ ul {
   color: #757575;
   margin-top: 10px;
 } */
-.project-name {
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-  margin-bottom: 4px;
-}
-.project-type {
-  line-height: 1.88;
-  letter-spacing: 0.03em;
-  color: #757575;
-}
+
 /* .main-button {
   background-color: #2196f3;
   color: white;
@@ -279,38 +268,15 @@ ul {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border: none;
 } */
-.filter-button {
-  background-color: #f5f4fa;
-  color: var(--secondary-color);
-  line-height: 1.62;
-  text-align: center;
-  letter-spacing: 0.03em;
-  font-weight: 500;
-  border: none;
-  border-radius: 4px;
-  height: 38px;
-  padding: 6px 22px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.filter-button:hover,
-.filter-button:focus {
-  background-color: var(--main-color);
-  color: white;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-}
 
 /* footer {
   background-color: var(--background-color);
 } */
 
-a:hover,
+/* a:hover,
 a:focus {
   color: var(--main-color);
-}
+} */
 
 /* .description-list {
   list-style: none;
@@ -394,44 +360,9 @@ figcaption {
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 } */
 
-address p {
+/* address p {
   margin-bottom: 9px;
-}
-.filter-list {
-  list-style: none;
-  display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
-}
-
-.filter-list-item:not(:first-child) {
-  margin-left: 8px;
-}
-
-.project-list {
-  list-style: none;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 30px;
-}
-
-.project-list-item {
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.project-list-item:hover {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-  cursor: pointer;
-}
-
-.project-list-item-description {
-  padding: 20px 24px;
-  border-right: 1px solid #eeeeee;
-  border-bottom: 1px solid #eeeeee;
-  border-left: 1px solid #eeeeee;
-}
+} */
 
 /* .team-icons-list {
   list-style: none;
@@ -455,11 +386,11 @@ address p {
   cursor: pointer;
 } */
 
-.client-section {
+/* .client-section {
   margin: 94px 215px;
 }
-
-.client-list {
+ */
+/* .client-list {
   list-style: none;
   display: flex;
   justify-content: space-between;
@@ -482,14 +413,14 @@ address p {
   fill: var(--main-color);
   border-color: var(--main-color);
   cursor: pointer;
-}
+} */
 
-.footer-contact-section {
+/* .footer-contact-section {
   margin-top: 60px;
   margin-left: 215px;
-}
+} */
 
-.footer-social-media-section {
+/* .footer-social-media-section {
   margin-left: 70px;
   margin-top: 72px;
 }
@@ -520,90 +451,9 @@ address p {
 .footer-social-media-list-item:hover {
   cursor: pointer;
   background-color: var(--main-color);
-}
+} */
 
-.project-list-item-image {
-  position: relative;
-  max-height: 294px;
-  overflow: hidden;
-}
-
-.project-list-item-image > .overlay {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  background-color: var(--main-color);
-  opacity: 0.9;
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.project-list-item-image-description {
-  display: block;
-  color: white;
-  padding-top: 49px;
-  padding-left: 24px;
-  padding-right: 45px;
-  font-size: 18px;
-  line-height: 1.56;
-}
-
-.project-list-item:hover .overlay {
-  transform: translateY(0);
-}
-
-.backdrop {
-  position: fixed;
-  background-color: rgba(0, 0, 0, 0.2);
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  opacity: 1;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: #ffffff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
-  width: 528px;
-  height: 581px;
-}
-
-.close-button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  top: 8px;
-  right: 8px;
-  height: 30px;
-  width: 30px;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 50%;
-  background-color: white;
-}
-
-.close-button-icon {
-  width: 18px;
-  height: 18px;
-}
-
-.is-hidden {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-}
-
-.footer-form-section {
+/* .footer-form-section {
   position: relative;
   margin-top: 72px;
   margin-left: 78px;
@@ -664,6 +514,160 @@ address p {
 .footer-form-section-button-icon {
   width: 24px;
   height: 24px;
+} */
+
+.filter-button {
+  background-color: #f5f4fa;
+  color: var(--secondary-color);
+  line-height: 1.62;
+  text-align: center;
+  letter-spacing: 0.03em;
+  font-weight: 500;
+  border: none;
+  border-radius: 4px;
+  height: 38px;
+  padding: 6px 22px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.filter-button:hover,
+.filter-button:focus {
+  background-color: var(--main-color);
+  color: white;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.project-name {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  margin-bottom: 4px;
+}
+.project-type {
+  line-height: 1.88;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+
+.filter-list {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
+.filter-list-item:not(:first-child) {
+  margin-left: 8px;
+}
+
+.project-list {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 30px;
+}
+
+.project-list-item {
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.project-list-item:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+  cursor: pointer;
+}
+
+.project-list-item-description {
+  padding: 20px 24px;
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+}
+
+.project-list-item-image {
+  position: relative;
+  max-height: 294px;
+  overflow: hidden;
+}
+
+.project-list-item-image > .overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  background-color: var(--main-color);
+  opacity: 0.9;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.project-list-item-image-description {
+  display: block;
+  color: white;
+  padding-top: 49px;
+  padding-left: 24px;
+  padding-right: 45px;
+  font-size: 18px;
+  line-height: 1.56;
+}
+
+.project-list-item:hover .overlay {
+  transform: translateY(0);
+}
+
+/* .backdrop {
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.2);
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  width: 528px;
+  height: 581px;
+}
+
+.close-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  height: 30px;
+  width: 30px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: white;
+}
+
+.close-button-icon {
+  width: 18px;
+  height: 18px;
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
 
 .modal-margin {
@@ -812,3 +816,4 @@ address p {
   font-size: 16px;
   line-height: 1.88;
 }
+ */
