--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -11,6 +11,11 @@ a {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+a:hover,
+a:focus {
+  color: $primary-color;
+}
+
 button {
   cursor: pointer;
 }
