--- a/sass/components/_current-offer.scss
+++ b/sass/components/_current-offer.scss
@@ -8,6 +8,8 @@
   display: flex;
   list-style: none;
   margin-bottom: 94px;
+  padding: 0;
+  margin: 0 0 94px 0;
 
   &__heading {
     color: $secondary-color;
@@ -58,6 +60,8 @@
   column-gap: 30px;
   align-items: center;
   justify-content: center;
+  padding: 0;
+  margin: 0;
 
   &__element {
     display: flex;
