--- a/sass/components/_main-title.scss
+++ b/sass/components/_main-title.scss
@@ -14,7 +14,7 @@
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    margin-bottom: 30px;
+    margin: 0 0 30px 0;
   }
 
   &__button {
