--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -14,6 +14,8 @@
     list-style: none;
     display: flex;
     align-items: center;
+    padding: 0;
+    margin: 0;
   }
 }
 
@@ -37,24 +39,26 @@
 .navigation__link {
   color: $secondary-color;
 
-  &--blue {
+  &--highlight {
     color: $primary-color;
-  }
 
-  ::after {
-    content: "";
-    display: block;
-    height: 4px;
-    background-color: $primary-color;
-    border-radius: 2px;
-    position: relative;
-    top: 31px;
+    &::after {
+      content: "";
+      display: block;
+      height: 4px;
+      background-color: $primary-color;
+      border-radius: 2px;
+      position: relative;
+      top: 31px;
+    }
   }
 }
 
-.contact {
+.header-contact {
   display: flex;
   list-style: none;
+  padding: 0;
+  margin: 0;
 
   &__icon {
     display: flex;
@@ -72,17 +76,17 @@
   }
 }
 
-.contact__element {
+.header-contact__element {
   display: flex;
   align-items: center;
 
   &:first-child {
     margin-right: 50px;
   }
-  &:hover .contact__icon {
+  &:hover .header-contact__icon {
     fill: $primary-color;
   }
-  &:hover .contact__link {
+  &:hover .header-contact__link {
     color: $primary-color;
     cursor: pointer;
   }
