--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,12 +1,13 @@
 .team {
   background-color: #f5f4fa;
-  height: 648px;
   margin: 0 auto;
   padding: 94px 215px;
 
   &__list {
     list-style: none;
     display: flex;
+    padding: 0;
+    margin: 0;
   }
 
   &__element {
@@ -28,7 +29,7 @@
     line-height: 1.18;
     text-align: center;
     letter-spacing: 0.03em;
-    margin-top: 30px;
+    margin: 30px 0 0 0;
   }
 
   &__occupation {
@@ -36,7 +37,7 @@
     text-align: center;
     letter-spacing: 0.03em;
     color: #757575;
-    margin-top: 10px;
+    margin: 10px 0 0 0;
   }
 
   &__social {
@@ -44,7 +45,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 16px 32px 18px 32px;
+    margin: 16px 32px 30px;
     width: 206px;
     height: 44px;
     fill: #afb1b8;
