--- a/sass/main.css
+++ b/sass/main.css
@@ -11,6 +11,11 @@ a {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+a:hover,
+a:focus {
+  color: #2196f3;
+}
+
 button {
   cursor: pointer;
 }
@@ -59,6 +64,9 @@ figure {
   background-color: rgba(255, 255, 255, 0.1);
   fill: white;
 }
+.social-media--footer:not(:first-child) {
+  margin-left: 10px;
+}
 .social-media:hover {
   background-color: #2196f3;
   fill: white;
@@ -80,6 +88,8 @@ figure {
   list-style: none;
   display: flex;
   align-items: center;
+  padding: 0;
+  margin: 0;
 }
 
 .navigation {
@@ -100,10 +110,10 @@ figure {
 .navigation__link {
   color: #212121;
 }
-.navigation__link--blue {
+.navigation__link--highlight {
   color: #2196f3;
 }
-.navigation__link ::after {
+.navigation__link--highlight::after {
   content: "";
   display: block;
   height: 4px;
@@ -113,17 +123,19 @@ figure {
   top: 31px;
 }
 
-.contact {
+.header-contact {
   display: flex;
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
-.contact__icon {
+.header-contact__icon {
   display: flex;
   margin-right: 10px;
   fill: #757575;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.contact__link {
+.header-contact__link {
   color: #757575;
   font-weight: 500;
   font-size: 14px;
@@ -131,17 +143,17 @@ figure {
   letter-spacing: 0.02em;
 }
 
-.contact__element {
+.header-contact__element {
   display: flex;
   align-items: center;
 }
-.contact__element:first-child {
+.header-contact__element:first-child {
   margin-right: 50px;
 }
-.contact__element:hover .contact__icon {
+.header-contact__element:hover .header-contact__icon {
   fill: #2196f3;
 }
-.contact__element:hover .contact__link {
+.header-contact__element:hover .header-contact__link {
   color: #2196f3;
   cursor: pointer;
 }
@@ -161,7 +173,7 @@ figure {
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  margin-bottom: 30px;
+  margin: 0 0 30px 0;
 }
 .main-title__button {
   background-color: #2196f3;
@@ -187,6 +199,8 @@ figure {
   display: flex;
   list-style: none;
   margin-bottom: 94px;
+  padding: 0;
+  margin: 0 0 94px 0;
 }
 .main-list__heading {
   color: #212121;
@@ -235,6 +249,8 @@ figure {
        column-gap: 30px;
   align-items: center;
   justify-content: center;
+  padding: 0;
+  margin: 0;
 }
 .specialities__element {
   display: flex;
@@ -258,13 +274,14 @@ figure {
 
 .team {
   background-color: #f5f4fa;
-  height: 648px;
   margin: 0 auto;
   padding: 94px 215px;
 }
 .team__list {
   list-style: none;
   display: flex;
+  padding: 0;
+  margin: 0;
 }
 .team__element {
   display: flex;
@@ -282,25 +299,52 @@ figure {
   line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
-  margin-top: 30px;
+  margin: 30px 0 0 0;
 }
 .team__occupation {
   line-height: 1.15;
   text-align: center;
   letter-spacing: 0.03em;
   color: #757575;
-  margin-top: 10px;
+  margin: 10px 0 0 0;
 }
 .team__social {
   list-style: none;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 16px 32px 18px 32px;
+  margin: 16px 32px 30px;
   width: 206px;
   height: 44px;
   fill: #afb1b8;
   padding: 0;
+}
+
+.clients {
+  margin: 94px 215px;
+}
+.clients__list {
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  fill: #afb1b8;
+  padding: 0;
+}
+
+.clients__element {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  width: 170px;
+  height: 92px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.clients__element:hover {
+  fill: #2196f3;
+  border-color: #2196f3;
+  cursor: pointer;
 }
 
 .page-footer {
@@ -311,10 +355,383 @@ figure {
   display: flex;
 }
 
+.footer-contact {
+  margin-top: 60px;
+  margin-left: 215px;
+}
+
 .address {
   color: white;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   margin-top: 20px;
+  font-style: normal;
+}
+.address__element {
+  margin: 0 0 9px 0;
+}
+.address__link {
+  color: #757575;
+}
+
+.footer-social-media {
+  margin-left: 70px;
+  margin-top: 72px;
+}
+.footer-social-media__heading {
+  text-transform: uppercase;
+  color: white;
+  font-weight: 700;
+  letter-spacing: 0.03em;
+  margin: 0 0 20px 0;
+  font-size: 14px;
+  line-height: 16px;
+}
+.footer-social-media__list {
+  list-style: none;
+  display: flex;
+  padding: 0;
+}
+
+.footer-form {
+  position: relative;
+  margin-top: 72px;
+  margin-left: 78px;
+  width: 570px;
+  min-height: 86px;
+}
+.footer-form__heading {
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 16px;
+  color: white;
+  display: block;
+  margin-bottom: 20px;
+  letter-spacing: 0.03em;
+}
+.footer-form__elements {
+  display: flex;
+}
+.footer-form__input {
+  height: 50px;
+  width: 358px;
+  top: 36px;
+  background-color: #2f303a;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  color: rgba(255, 255, 255, 0.6);
+  padding: 15px 16px;
+  outline: none;
+}
+.footer-form__input::-moz-placeholder {
+  color: rgba(255, 255, 255, 0.6);
+}
+.footer-form__input::placeholder {
+  color: rgba(255, 255, 255, 0.6);
+}
+.footer-form__button {
+  min-width: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-left: 12px;
+  background: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border-width: 0;
+  color: white;
+  fill: white;
+  letter-spacing: 0.06em;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+}
+.footer-form__icon {
+  width: 24px;
+  height: 24px;
+}
+
+.backdrop {
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.2);
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.close-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  height: 30px;
+  width: 30px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: white;
+}
+.close-button__icon {
+  width: 18px;
+  height: 18px;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  width: 528px;
+  height: 581px;
+}
+.modal__margin {
+  margin: 40px 40px 20px;
+}
+.modal__heading {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--secondary-color);
+  margin-bottom: 12px;
+}
+.modal__label {
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  margin-bottom: 4px;
+  color: #757575;
+  display: block;
+}
+.modal__input-section {
+  display: flex;
+  align-items: center;
+  position: relative;
+  width: 448px;
+  height: 40px;
+  margin-bottom: 10px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal__input-section:focus-within {
+  border-color: #2196f3;
+  fill: #2196f3;
+}
+.modal__input {
+  width: 100%;
+  height: 100%;
+  border: none;
+  margin-left: 42px;
+  padding: 0;
+  font-size: 12px;
+  letter-spacing: 0.01em;
+  outline: none;
+}
+.modal__icon {
+  position: absolute;
+  height: 18px;
+  width: 18px;
+  left: 12px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal__submit {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 30px 164px 40px;
+  width: 200px;
+  height: 50px;
+  padding: 0;
+  background-color: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border-width: 0;
+  color: white;
+  letter-spacing: 0.06em;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+}
+
+.modal__text-area {
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  width: 448px;
+  height: 120px;
+  padding: 12px 16px;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  resize: none;
+  outline: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal__text-area::-moz-placeholder {
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+.modal__text-area::placeholder {
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+.modal__text-area:focus-within {
+  border-color: #2196f3;
+}
+
+.checkbox {
+  display: flex;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #757575;
+  margin: 0px 54px;
+}
+.checkbox__label {
+  position: relative;
+  cursor: pointer;
+}
+.checkbox__icon {
+  position: absolute;
+  left: -23px;
+  top: 4px;
+  width: 16px;
+  height: 15px;
+  background-color: white;
+  border-radius: 2px;
+  border: 1px solid #212121;
+  fill: none;
+  cursor: pointer;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.checkbox__button {
+  margin-right: 7px;
+  visibility: hidden;
+}
+.checkbox__link {
+  color: #2196f3;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.checkbox__button:checked + .checkbox__label > .checkbox__icon {
+  background-color: #2196f3;
+  fill: white;
+  border: none;
+}
+
+.filter-button {
+  background-color: #f5f4fa;
+  color: #212121;
+  line-height: 1.62;
+  text-align: center;
+  letter-spacing: 0.03em;
+  font-weight: 500;
+  border: none;
+  border-radius: 4px;
+  height: 38px;
+  padding: 6px 22px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.filter-button:focus, .filter-button:hover {
+  background-color: #2196f3;
+  color: white;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.filter-list {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  margin: 0 0 50px 0;
+  padding: 0;
+}
+.filter-list__element:not(:first-child) {
+  margin-left: 8px;
+}
+
+.project-list {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 30px;
+  padding: 0;
+  margin: 0;
+}
+.project-list__element {
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.project-list__element:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  cursor: pointer;
+}
+.project-list__image {
+  position: relative;
+  max-height: 294px;
+  overflow: hidden;
+}
+.project-list__labels {
+  padding: 20px 24px;
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+}
+.project-list__name {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  margin-bottom: 4px;
+  margin: 0;
+}
+.project-list__type {
+  line-height: 1.88;
+  letter-spacing: 0.03em;
+  color: #757575;
+  margin: 0;
+}
+.project-list__overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  background-color: #2196f3;
+  opacity: 0.9;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.project-list__description {
+  display: block;
+  color: white;
+  padding-top: 49px;
+  padding-left: 24px;
+  padding-right: 45px;
+  font-size: 18px;
+  line-height: 1.56;
+}
+
+.project-list__element:hover .project-list__overlay {
+  transform: translateY(0);
 }/*# sourceMappingURL=main.css.map */
