--- a/sass/components/_filter-button.scss
+++ b/sass/components/_filter-button.scss
@@ -12,6 +12,7 @@
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
 
   &:focus,
   &:hover {
