--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,10 +1,18 @@
 .logo {
   color: #000000;
-  font-family: "Raleway";
+  font-family: $logo-font;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.15;
   letter-spacing: 0.03em;
+  text-decoration: none;
+  font-style: normal;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: $primary-color;
+  }
 
   &__color {
     color: $primary-color;
