--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -28,6 +28,7 @@
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   background-color: white;
+  cursor: pointer;
 
   &__icon {
     width: 18px;
@@ -82,8 +83,8 @@
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:focus-within {
-      border-color: $primary_color;
-      fill: $primary_color;
+      border-color: $primary-color;
+      fill: $primary-color;
     }
   }
 
@@ -106,7 +107,7 @@
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
-  &__submit {
+  &__submit-button {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -114,7 +115,7 @@
     width: 200px;
     height: 50px;
     padding: 0;
-    background-color: $primary_color;
+    background-color: $primary-color;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     border-width: 0;
@@ -123,6 +124,7 @@
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
+    cursor: pointer;
   }
 }
 
@@ -146,6 +148,6 @@
     color: rgba(117, 117, 117, 0.5);
   }
   &:focus-within {
-    border-color: $primary_color;
+    border-color: $primary-color;
   }
 }
