--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -25,6 +25,14 @@
 
   &__link {
     color: #757575;
+    text-decoration: none;
+    font-style: normal;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+      color: $primary-color;
+    }
   }
 }
 
@@ -82,6 +90,10 @@
     padding: 15px 16px;
     outline: none;
 
+    &:focus-within {
+      border-color: $primary-color;
+    }
+
     &::placeholder {
       color: rgba(255, 255, 255, 0.6);
     }
@@ -103,6 +115,7 @@
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
+    cursor: pointer;
   }
 
   &__icon {
