--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -38,6 +38,14 @@
 
 .navigation__link {
   color: $secondary-color;
+  text-decoration: none;
+  font-style: normal;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: $primary-color;
+  }
 
   &--highlight {
     color: $primary-color;
@@ -73,6 +81,9 @@
     font-size: 14px;
     line-height: 1.15;
     letter-spacing: 0.02em;
+    text-decoration: none;
+    font-style: normal;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
 
