--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,3 +1,5 @@
 $primary-color: #2196f3;
 $secondary-color: #212121;
 $background-color: #2f303a;
+$main-font: "Roboto", sans-serif;
+$logo-font: "Raleway", sans-serif;
